syntax = "proto3";
package proto;
import "core.proto";

option go_package = "github.com/anyuan-chen/record/proto/pkg/collage_maker_pb";

message Images {
    repeated ImageURL images = 1;
    int64 rowCount = 2;
    int64 colCount = 3;
    int64 targetSize = 4;
}
message ImageURL {
    string imageURL = 1;
}

service ImageProcessor {
    rpc GetCollage (Images) returns (Image);
}

// python3 -m grpc_tools.protoc -I=./ --python_out=./pkg/collage_maker_pb \
// --grpc_python_out=./pkg/collage_maker_pb collage_maker.proto

// protoc -I=./ --go_out=./pkg/collage_maker_pb --go_opt=paths=source_relative \
// --go-grpc_out=./pkg/collage_maker_pb --go-grpc_opt=paths=source_relative \
// collage_maker.proto ``